<resources>
    <string name="app_name">NeighborUI</string>
    <string name="back">返回</string>
    <string name="my_msg">我的消息</string>
    <string name="my_favoured">我赞过的</string>
    <string name="my_activity">我的活动</string>
    <string name="myFavorites">我的赞</string>
    <string name="neighborhoodMoments">社区新鲜事</string>
    <string name="default_neighbor_type_name">全部</string>
    <string name="delete">删除</string>
    <string name="oldPrice_with_num">原价¥%1$s</string>
    <string name="nowPrice_with_num">现价¥%1$s</string>
    <string name="plus">+</string>
    <string name="no_one_published">还没有人发表社区新鲜事哦，快去和邻居们分享新鲜事吧</string>
    <string name="reply">回复</string>
    <string name="YOU">你</string>
    <string name="has_favoured">点赞了</string>
    <string name="has_replyed">回复了</string>
    <string name="comment">评论</string>
    <string name="send">发送</string>
    <string name="reply_content_can_not_be_empty">评论不能为空</string>
    <string name="neighbor_reply_ok">回复成功</string>
    <string name="neighbor_reply_faild_with_code">评论失败%1$s</string>
    <string name="no_msg_about_me">还没有关于我的消息哦</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="no_more_data">没有更多了</string>
    <string name="neighbor_reply_with_name">回复: %1$s</string>
    <string name="releaseOK">发布成功</string>
    <string name="no_published">还没有发表社区新鲜事哦</string>
    <string name="my_reported">我发布的</string>
    <string name="my_message">我的消息</string>
    <string name="my_joined">我参与的活动</string>
    <string name="my_neighbor_board">我的社区新鲜事</string>
    <string name="no_favoured_other">还没有赞过哦</string>
    <string name="no_joined_activity">还没有参加过活动哦</string>
    <string name="loadFaildwithCode">加载失败，请稍后重试%1$s</string>
    <string name="cancel">取消</string>
    <string name="neighbor_delete_ok">删除成功!</string>
    <string name="is_delete_this_neighbor">是否删除这条社区新鲜事？</string>
    <string name="loading">加载中..</string>
    <string name="registration_information">填写报名资料</string>
    <string name="please_input_name">请填写姓名</string>
    <string name="please_input_mobile">请填写手机号码</string>
    <string name="please_input_trueth_mobile">请填写正确的手机号码</string>
    <string name="makeSure">确认</string>
    <string name="sign_up_neibhbor_activity_ok">报名成功</string>
    <string name="input_report_detail">请选择举报内容</string>
    <string name="have_reported">已举报</string>
    <string name="have_reported_doing">举报完成，受理中</string>
    <string name="junkInformation">垃圾信息</string>
    <string name="registration_name">填写姓名</string>
    <string name="registration_phone">报名手机号</string>
    <string name="confirmRegistration">确认报名</string>
    <string name="no_reply_user">无回复对象</string>
    <string name="no_favour_user">无点赞对象</string>
    <string name="no_input_message">输入的内容为空</string>
    <string name="neighbor_i_want_signup">我要报名</string>
    <string name="have_signed_count">已报人数%1$s</string>
    <string name="have_signed">已报名</string>
    <string name="stop_signup_title">停止报名</string>
    <string name="stop_signup_faild_with_code">停止报名失败%1$s</string>
    <string name="stop_signup_ok">停止报名成功</string>
    <string name="makeSure_to_stop_signup">确认停止报名吗</string>
    <string name="neighbor_reply_with_name2">评论 %1$s</string>
    <string name="noComments">还没有人写评论哦</string>
    <string name="neighbor_favour_with_count">赞 %1$s</string>
    <string name="neighbor_signup_count">报名人数 %1$s</string>
    <string name="enrollEnd">报名结束</string>
    <string name="no_one_join">还没有人报名哦</string>
    <string name="somebody_neighborhood">%1$s的社区新鲜事</string>
    <string name="introduceToNeighbors">向邻居介绍闲置物品</string>
    <string name="deadlineTime">报名截止日期</string>
    <string name="old_price">原价</string>
    <string name="now_pirce">现价</string>
    <string name="RMB">￥</string>
    <string name="inputOriginalPrice">输入你购买的价格</string>
    <string name="inputPresentPrice">输入你出售的价格</string>
    <string name="release">发布</string>
    <string name="prompt">提示</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="upload_neighbor_chat">发布邻里闲聊</string>
    <string name="upload_neighbor_activity">发布邻里活动</string>
    <string name="upload_neighbor_help">发布邻里互助</string>
    <string name="upload_neigbor_sell">发布邻里闲置</string>
    <string name="share_new_message_to_neighbor">和邻居分享新鲜事...</string>
    <string name="neighbor_activity_infos">活动内容...</string>
    <string name="ask_neighbor_something">遇到什么问题可以问问左右邻里...</string>
    <string name="tell_neighbor_something_about_something">"向邻居介绍闲置物品..."</string>
    <string name="close">关闭</string>
    <string name="notYear">年</string>
    <string name="month">月</string>
    <string name="notDay">日</string>
    <string name="hours">时</string>
    <string name="minutes">分</string>
    <string name="select_date_can_not_early">请不要选择之前的时间点</string>
    <string name="selectd_pic_too_many">图片不能超过9张</string>
    <string name="please_input_something_about_neighbor">请输入社区新鲜事内容</string>
    <string name="activity_deadline_can_not_be_empty">截止报名时间不能为空</string>
    <string name="sell_price_can_not_be_empty">出售价格不能为空</string>
    <string name="reporting">正在发布</string>
    <string name="alibaba_image_server">\?x-oss-process=image/resize,m_fill,h_height,w_width</string>
    <string name="uploadFaild">上传失败</string>
    <string name="infringement">侵权</string>
    <string name="falseInformation">虚假信息</string>
    <string name="cheat">欺诈骗钱</string>
    <string name="negativeInformation">传播色情、暴力、反动信息</string>
    <string name="report_ok">确认举报</string>
    <string name="presentPrice_RMB">现价￥</string>
    <string name="enrollSurplus">距离报名截止仅剩</string>
    <string name="hour">时</string>
    <string name="min">分</string>
    <string name="sec">秒</string>
    <string name="takePhoto">拍照</string>
    <string name="chooseFromAlbum">从相册中选择</string>
    <string name="select_picture">选择图片</string>

    <string name="img_icon">img_icon</string>
</resources>
