<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_500"
    android:layout_height="@dimen/dp_420"
    android:layout_gravity="center"
    android:background="@color/white"
    android:clickable="true">

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_26"
        android:text="@string/close"
        android:textColor="@color/color_ff4483f8"
        android:textSize="@dimen/sp_24" />

    <TextView
        android:id="@+id/tv_comfire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_26"
        android:text="@string/makeSure"
        android:textColor="@color/color_ff4483f8"
        android:textSize="@dimen/sp_24" />

    <DatePicker
        android:paddingTop="@dimen/dp_0"
        android:id="@+id/dp_YMD"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/dp_70"
        android:layout_height="@dimen/dp_236"
        android:layout_marginStart="@dimen/dp_35"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_marginBottom="-18dp"
        android:orientation="horizontal"
        android:layout_alignStart="@id/dp_YMD"
        android:layout_alignEnd="@id/dp_YMD"
        android:layout_above="@id/dp_YMD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/sp_20"
            android:text="@string/notYear"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notDay"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TimePicker
        android:layout_alignParentBottom="true"
        android:id="@+id/tp_HD"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_236"
        android:layout_marginBottom="@dimen/dp_70"
        android:layout_marginEnd="@dimen/dp_35"
        android:layout_toEndOf="@+id/dp_YMD"
        android:timePickerMode="spinner" />

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_marginBottom="-18dp"
        android:orientation="horizontal"
        android:layout_alignStart="@id/tp_HD"
        android:layout_alignEnd="@id/tp_HD"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:layout_above="@id/tp_HD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/sp_20"
            android:text="@string/hours"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minutes"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>