<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/garbage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_50"
        android:drawablePadding="@dimen/dp_16"
        android:drawableStart="@mipmap/neighbor_report_no"
        android:gravity="center"
        android:text="@string/junkInformation"
        android:textColor="@color/ff323232"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:id="@+id/tort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/garbage"
        android:layout_marginStart="@dimen/dp_320"
        android:drawablePadding="@dimen/dp_16"
        android:drawableStart="@mipmap/neighbor_report_no"
        android:gravity="center"
        android:text="@string/infringement"
        android:textColor="@color/ff323232"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:id="@+id/sham"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/garbage"
        android:layout_below="@id/garbage"
        android:layout_marginTop="@dimen/dp_52"
        android:drawablePadding="@dimen/dp_16"
        android:drawableStart="@mipmap/neighbor_report_no"
        android:gravity="center"
        android:text="@string/falseInformation"
        android:textColor="@color/ff323232"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:id="@+id/cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/sham"
        android:layout_alignStart="@id/tort"
        android:drawablePadding="@dimen/dp_16"
        android:drawableStart="@mipmap/neighbor_report_no"
        android:gravity="center"
        android:text="@string/cheat"
        android:textColor="@color/ff323232"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:id="@+id/pornographic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/garbage"
        android:layout_below="@id/sham"
        android:layout_marginTop="@dimen/dp_52"
        android:drawablePadding="@dimen/dp_16"
        android:drawableStart="@mipmap/neighbor_report_no"
        android:gravity="center_vertical"
        android:text="@string/negativeInformation"
        android:textColor="@color/ff323232"
        android:textSize="@dimen/sp_22" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/pornographic"
        android:layout_marginTop="@dimen/dp_44"
        android:background="@color/color_gary_e9e9e9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pornographic"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_44"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/report_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/ff323232"
            android:textSize="@dimen/sp_24" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/color_gary_e9e9e9" />

        <TextView
            android:id="@+id/report_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:text="@string/report_ok"
            android:textColor="@color/color_ff4483f8"
            android:textSize="@dimen/sp_24" />
    </LinearLayout>

</RelativeLayout>