<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fff2f2f2">

    <RelativeLayout
        android:id="@+id/rl_right"
        android:layout_width="@dimen/dp_100"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_neighbor_list_left_bg"
        android:elevation="@dimen/dp_10"
        >

        <com.jingxi.smartlife.pad.sdk.neighbor.ui.views.RoundImageView
            android:id="@+id/iv_neighbor_head"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_centerHorizontal="true"
            app:borderThickness="@dimen/dp_0"
            app:borderOutsideColor="@color/transparent"
            app:borderColor="@color/transparent"
            android:layout_marginTop="@dimen/dp_47"
            android:transitionName="neighbor_head"/>

        <TextView
            android:id="@+id/tv_neighbor_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_64"
            android:drawableTop="@mipmap/neighbor_btn_activity"
            android:gravity="center_horizontal"
            android:text="@string/my_activity"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_neighbor_mypraise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_neighbor_activity"
            android:layout_marginBottom="@dimen/dp_30"
            android:drawableTop="@mipmap/neighbor_btn_admire"
            android:gravity="center_horizontal"
            android:text="@string/my_favoured"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_neighbor_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_neighbor_mypraise"
            android:layout_marginBottom="@dimen/dp_30"
            android:drawableTop="@mipmap/neighbor_btn_message"
            android:gravity="center_horizontal"
            android:text="@string/my_msg"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"/>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/rl_right"
        />

    <com.jingxi.smartlife.pad.sdk.neighbor.ui.views.FloatingActionButton
        android:id="@+id/fab_addlinliq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:layout_marginEnd="79dp"
        android:src="@mipmap/create_white_150"
        app:urv_fab_colorNormal="#55b4fd"
        app:urv_fab_colorPressed="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@drawable/shape_shado_titlebar"/>
</RelativeLayout>